Cambio de escala horizontal en MainWindow

--- a/Grupal/Plot Tool (Python)/src/ui/designer/mainWindow2.ui
+++ b/Grupal/Plot Tool (Python)/src/ui/designer/mainWindow2.ui
@@ -229,7 +229,7 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_5">
              <item>
-              <widget class="QRadioButton" name="radioButton">
+              <widget class="QRadioButton" name="freqLinRbtn">
                <property name="text">
                 <string>Lineal</string>
                </property>
@@ -239,7 +239,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QRadioButton" name="freqLinRbtn">
+              <widget class="QRadioButton" name="freqLogRbtn">
                <property name="text">
                 <string>Logarítmico</string>
                </property>
